--- a/source/widget/UserHome.report/report.less
+++ b/source/widget/UserHome.report/report.less
@@ -10,23 +10,28 @@
   }
 
   0% {
+    -webkit-transform:translate3d(0, -3000px, 0);
     transform: translate3d(0, -3000px, 0);
   }
 
   60% {
     opacity: 1;
+    -webkit-transform:translate3d(0, 25px, 0);
     transform: translate3d(0, 25px, 0);
   }
 
   75% {
+    -webkit-transform:translate3d(0, -10px, 0);
     transform: translate3d(0, -10px, 0);
   }
 
   90% {
+    -webkit-transform:translate3d(0, 5px, 0);
     transform: translate3d(0, 5px, 0);
   }
 
   to {
+    -webkit-transform:none;
     transform: none;
   }
 }
@@ -34,7 +39,8 @@
 
 @keyframes rotateC{
 	to{
-		transform:rotate(1turn)
+    	-webkit-transform: rotate(1turn);
+		transform:rotate(1turn);
 	}
 }
 .pull-left{
@@ -67,7 +73,6 @@
     background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#35285d), to(#27294f));
     background: -moz-linear-gradient(top, #35285d,#27294f);
 	background: -ms-linear-gradient(top, #35285d,#27294f); 
-
 	padding: 0;
 	margin:0;
 	box-sizing: border-box;
@@ -124,6 +129,7 @@
 			font-size: 0.75em;
 			position: absolute;
 			top:20%;
+			width:100%;
 			width: 100vw;
     		height: 0;
 			border-top:1px solid #fff;
@@ -141,6 +147,7 @@
 					&.triangle{
 						bottom:7px;
    	 					transform: rotate(180deg) translateY(-37px) ;
+						-webkit-transform:rotate(180deg) translateY(-37px) ;
 					}
 					&:before{
 						top:-9px;
@@ -242,7 +249,8 @@
     		left: 50%;
     		margin-left: calc( ~"-40% - 10px ");
 			#pie{
-				transform:rotate(-90deg)
+				-webkit-transform:rotate(-90deg);
+				transform:rotate(-90deg);
 			}
 			img,p{
 				width : 100px;
@@ -284,7 +292,9 @@
 					height: 100px;
 					border-radius: 50%;
 				}
-				
+			}
+			.teacherName{
+				font-size: 20px;
 			}
 		}
 
@@ -295,9 +305,11 @@
 			padding: 0 10%;
 			left: -5%;
 			.item{
+				font-size: 16px;
 				cursor: pointer;
 				border-radius: 10px;
 				padding: 20px;
+				-webkit-transform:rotateX(32deg) ;
 				transform:rotateX(32deg) ;
 				height: 200px;
 				overflow: hidden;
@@ -682,6 +694,7 @@
    	 	font-size: 15px;
    	 	.triangle{
    	 		&:before,&:after{
+   	 			-webkit-transform:rotate(180deg) translateY(-36px) ;
    	 			transform: rotate(180deg) translateY(-36px) ;
    	 		}
    	 	}
@@ -699,6 +712,31 @@
 				}
 			}
 		}
+	}
+}
+@media screen and(max-height:480px) {
+	.section.section-2 .wrap img, .section.section-2 .wrap p{
+		height:60px;
+		width: 60px;
+		line-height: 60px;
+		font-size: 14px;
+		margin-top: -30px;
+		margin-left: -30px;
+	}
+	.section.section-2 .wrap{
+		width: 202px;
+		padding-top: 5px;
+	}
+	.section.section-3 .teacherInfo .teacherImg{
+		width: 80px;
+		height: 80px;
+		img{
+			width: 70px;
+			height: 70px;
+		}
+	}
+	.section.section-4 .sReward{
+		margin-top: -70px;
 	}
 }
 .body-bgColor ul {
