--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -71,8 +71,10 @@ a,button,.btn{
     &.icon-arrow-right {
         width: 4px;
         height: 14px;
-        font: 400 9px/14px consolas;
+        font: 400 14px/14px consolas;
         padding-top: 4px;
+        color: rgba(255,255,255,.3);
+
     }
 }
 .header-layer {
