--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -24,7 +24,7 @@
             display: block;
             width: 350px;
             height: 99px;
-            background: url(img/logo.png?20160707) no-repeat left center;
+            background: url(img/logo.png?20160707) no-repeat 10px center;
             color: transparent;
             
         }
