学习中心延期功能增加

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -79,6 +79,11 @@
  	padding-top: 5px;
  	cursor: default;
  }
+ .label-Notdelay{
+ 	background: #ccd1d9;
+ 	padding-top: 12px;
+ 	cursor: default;
+ }
  .label-continun{
  	background: #37bc9b;
  	padding-top: 12px;
