--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -197,7 +197,9 @@ a,button,.btn{
 
 #module-breadcrumb {
     background-color: transparent;
-    margin-bottom: 9px;
+    margin: 5px 0;
+    padding:8px;
+    font-size: 14px;
     >.active {
         color: #1e89e0;
     }
