--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -11,8 +11,8 @@ ul,li{list-style: none;}
 	margin-bottom: 20px;
 	.advantage-item{
 		padding: 25px 44px 0px 102px;
-		background: url(../../static/img/advantage.png);
-		width:290px;
+		background: url(../../static/img/advantage03.png);
+		width:390px;
 		margin-right: 10px;
 		height: 100px;
 		float: left;
@@ -23,33 +23,26 @@ ul,li{list-style: none;}
 		}
 		&>p:last-child{
 			line-height: 20px;
-            
 		}
 		&:hover{
 			color:#3bafda;
 		}
 		&:nth-child(1){
 			&:hover{
-			background-position: 0  -149px;
+			background-position: 0  -181px;
 			}
 		}
 		&:nth-child(2){
-			background-position: -300px 0;
+			background-position: -400px 0;
 			&:hover{
-			background-position: -300px  -149px;
+			background-position: -400px  -181px;
 			}
 		}
 		&:nth-child(3){
-			background-position: -600px 0;
+			background-position: -800px 0;
+            margin-right: 0;
 			&:hover{
-			background-position: -600px  -149px;
-			}
-		}
-		&:nth-child(4){
-			background-position: -900px 0;
-			margin-right: 0;
-			&:hover{
-			background-position: -900px -149px;
+			background-position: -800px  -181px;
 			}
 		}
 	}
@@ -1570,7 +1563,11 @@ ul,li{list-style: none;}
             span {
                 display: inline-block;padding-right:5px;
             }
-            .satisfy {color: #999;font-size: 12px;}
+            .satisfy {
+                color: #999;font-size: 12px;
+                a {color: #999;}
+            }
+            a {color: #e74c3c;}
         }
         p.difficulty {
             height:30px; overflow: hidden;padding-left:15px;color: #666;font-size: 14px;
@@ -1596,7 +1593,7 @@ ul,li{list-style: none;}
         }
     }
     .rank-places {
-        width:120px;height: 40px;color: #999;padding-top:22px;
+        width:110px;height: 40px;color: #999;padding-top:22px;
         strong {
             display: inline-block;width:46px;height: 40px;line-height: 40px;background:url(img/icon-rank.png) no-repeat;color: #fff;text-align: center;font-size: 20px;padding-left: 5px;
             &.hotReport {
@@ -1608,24 +1605,25 @@ ul,li{list-style: none;}
         }
     }
     .rank-money {
-        width:60px;line-height: 90px;color: #999;overflow: hidden;
-        strong{color: #666;}
+        width:88px;overflow: hidden;text-align: center;
+        strong{
+            display: inline-block;color: #e74c3c;font-size: 18px;font-weight: normal;padding-top:25px;
+            &.former {padding-top:32px;}
+        }
+        del {color:#999;}
     }
     .rank-btn {
-        width:98px;padding-top: 29px;
+        width:80px;padding-top: 29px;
         .btn {
-            background: #e74c3c;color: #fff;width:98px;height: 32px;text-align: center;
+            background: #e74c3c;color: #fff;width:80px;height: 32px;text-align: center;
             &.btn-gray {background: #bfbfbf;}
         }
     }
 }
 .problem{
 	background: #fff;
-	&:nth-child(12){
-		padding-bottom: 20px;
-	}
 	.content{
-		padding: 30px 10px 0 10px;
+		padding: 20px 10px 10px 10px;
 	}
 	img{
 		margin-right: 10px;
