--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -44,6 +44,13 @@
                 color: #666;
             }
         }
+        .dropdown-body-widen{
+            min-width: 200px;
+            .inline-block{
+                display: inline-block;
+                width: 60px;
+            }
+        }
         &.hover {
             position: relative;
             z-index: 10;
