学习中心头部

--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -5,7 +5,7 @@ body {
 
 #module-myheader {
     padding: 10px 0;
-    background: url(img/olympic.png?20160808) no-repeat center top #009f6a;
+    background: url(img/i_header_bg.png?20160808) no-repeat center top #009f6a;
     height: 80px;
     min-width: 600px;
     //    .container {
