--- a/source/widget/UserHome.report/report.less
+++ b/source/widget/UserHome.report/report.less
@@ -1,6 +1,14 @@
 @keyframes arrow {
-  to {
-    bottom: 30px;
+  0 {
+    transform: translateY(0px) rotate(180deg);
+    opacity: 1
+  }
+  99% {
+    transform: translateY(-30px) rotate(180deg)
+  }
+  100% {
+    transform: translateY(0px) rotate(180deg);
+    opacity: 0
   }
 }
 @keyframes bounceInDown {
@@ -85,7 +93,7 @@
   opacity: 0;
   padding-top: 6px;
 
-  .monkey {
+  .monkey, .allRight {
     width: 80vw;
     height: 80vw !important;
     max-width: 200px;
@@ -111,6 +119,23 @@
   &.section-2 {
     h4 {
       margin-top: 24px;
+    }
+    .subjectWrap {
+      position: absolute;
+      top: 30px;
+      left: 30px;
+      width: calc(~"50vw - 490px");
+
+      .subjectColor {
+        text-align: left;
+        display: inline-block;
+        float: left;
+        height: 4em;
+      }
+      .subjectColor+p {
+        text-align: left;
+        widows: 80%;
+      }
     }
     @media screen and(min-width:980px) {
       .stateWrap {
@@ -140,6 +165,18 @@
       left: 0;
       margin-left: -20vw;
 
+      &:before {
+        background-color: #fff;
+        border-radius: 50%;
+        width: 10px;
+        height: 10px;
+        content: '';
+        display: block;
+        position: absolute;
+        left: 50%;
+        margin-left: -5px;
+        top: -6px;
+      }
       .time {
         padding: 8px 9px;
         border: 1px solid #fff;
@@ -169,6 +206,7 @@
               top: 33px;
             }
           }
+          font-size: 14px;
         }
       }
       .process {
@@ -176,7 +214,7 @@
         position: absolute;
         margin-right: -30px !important;
         right: -20vw;
-        top: calc(~"8vw - 26px");
+        top: calc(~"30vw - 18px");
 
         .spot {
           background-color: #fff;
@@ -222,11 +260,15 @@
         transform: rotate(-90deg);
       }
       p {
+        color: #000;
+      }
+      &> p:nth-child(2) {
         width: 102px;
         height: 102px;
         position: absolute;
         left: 50%;
         top: 50%;
+        color: #fff;
         margin-top: -51px;
         margin-left: -51px;
         background: #27294f;
@@ -251,12 +293,24 @@
         max-width: 420px;
         width: calc(~"80% + 20px");
         padding-top: 10px;
-        margin: 0 auto;
+        margin: 0 auto 20px;
         border-radius: 50%;
         position: relative;
         border: 1px solid rgba(220, 220, 220, 0.5);
         left: 0;
         bottom: 0;
+      }
+      .subjectColor {
+        padding-left: 10%;
+        text-align: left;
+        display: inline-block;
+        float: left;
+        height: 3em;
+      }
+      .subjectColor+p {
+        text-align: left;
+        padding-right: 10%;
+        widows: 80%;
       }
     }
   }
@@ -267,10 +321,19 @@
     .teacherInfo {
       padding-top: 3em;
       margin-top: 8px;
-      box-shadow: 0 -10px 20px 0px rgba(0, 0, 0, 0.4);
+      // box-shadow: 0 -10px 20px 0px rgba(0, 0, 0, 0.4);
       position: relative;
       z-index: 4;
 
+      &:before {
+        background: url('img/ty_bg.png') repeat-x;
+        content: '';
+        display: block;
+        width: 100%;
+        height: 80px;
+        position: absolute;
+        top: -80px;
+      }
       .teacherImg {
         margin: 0 auto 1em;
         width: 110px;
@@ -359,9 +422,8 @@
         p {
           &.text {
             text-align: left;
-            overflow-y: auto;
+            overflow-y: hidden;
             height: 135px;
-            text-shadow: rgba(0, 0, 0, 0.8) 0 2px 0;
           }
           &.clearfix {
             margin-bottom: 5px;
@@ -414,13 +476,14 @@
         position: relative;
 
         .time {
-          width: 20%;
+          width: 10%;
           float: left;
+          margin-left: 5%;
           position: relative;
         }
         .line {
           width: 1px;
-          height: 100px;
+          height: 1000px;
           background: rgba(220, 220, 220, 0.5);
           position: absolute;
           top: 0;
@@ -433,14 +496,14 @@
             border-radius: 50%;
             position: absolute;
             left: -4px;
-            top: 6px;
+            top: 2px;
           }
         }
         .message {
-          width: 70%;
+          width: 60%;
           text-align: left;
           float: right;
-          padding-right: 10px;
+          margin-right: 10%;
 
           .right, .wrong, .not {
             background: #77c043;
@@ -467,7 +530,6 @@
       text-align: left;
       margin-top: 20px;
       padding: 0 10%;
-      height: 40%;
       position: relative;
 
       &::-webkit-scrollbar {
@@ -512,7 +574,6 @@
       text-align: left;
     }
     .liveWrong {
-      height: 80%;
       width: 100%;
       padding: 0 10%;
 
@@ -554,37 +615,6 @@
         }
       }
     }
-    .cover {
-      position: absolute;
-      width: 100%;
-      left: 0;
-      height: 100%;
-      background: #000;
-      top: 0;
-      opacity: 1;
-      vertical-align: middle;
-      display: none;
-      z-index: 999;
-
-      button {
-        position: absolute;
-        right: 10%;
-        top: 20%;
-        width: 20px;
-        height: 20px;
-        background: red;
-        outline: none;
-        border: none;
-        color: #fff;
-      }
-      img {
-        width: 100%;
-        position: absolute;
-        margin-top: -25%;
-        top: 50%;
-        left: 0;
-      }
-    }
   }
   &.section-8 {
     text-indent: center;
@@ -595,18 +625,18 @@
       border: 1px solid #fff;
       border-radius: 30px;
       display: block;
-      margin: 30px auto 60px;
+      margin: 20px auto;
       color: #fff;
       text-decoration: none;
       line-height: 52px;
-      font-size: 2em;
+      font-size: 30px;
       opacity: 0
     }
     img {
       &:first-child {
         max-width: 525px;
         width: 70%;
-        margin-top: 120px;
+        margin-top: 100px;
       }
       &:last-child {
       }
@@ -616,7 +646,7 @@
     width: 220px;
     height: 220px;
     font-size: 16px;
-    margin: 10% auto 0;
+    margin: 5% auto 0;
     border-radius: 50%;
     border: 1px solid transparent;
     background: url('img/correctRate.png');
@@ -641,18 +671,93 @@
     }
   }
 }
+.cover {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  height: 105%;
+  background: #000;
+  top: 0;
+  opacity: 1;
+  vertical-align: middle;
+  display: none;
+  z-index: 999;
+  overflow-y: auto;
+
+  &.tab {
+    background: rgba(0, 0, 0, 0.8);
+    padding: 0% 10%;
+  }
+  .clearfix {
+    text-align: center;
+    font-size: 40px;
+
+    span:last-child {
+      display: none !important;
+    }
+  }
+  .process {
+    padding-bottom: 8%;
+  }
+  .text {
+    font-size: 20px;
+    max-width: 980px;
+    margin: 0 auto;
+    overflow-y: auto;
+    height: 63%
+  }
+  button {
+    cursor: pointer;
+    background: url('img/closeButton.png');
+    width: 80px;
+    height: 80px;
+    outline: none;
+    border: none;
+    position: absolute;
+    bottom: 5em;
+    left: 50%;
+    margin-left: -40px;
+  }
+  img {
+    width: 100%;
+    position: absolute;
+    margin-top: -25%;
+    top: 50%;
+    left: 0;
+  }
+  @media screen and (max-width:767px) {
+    .process {
+      font-size: 34px;
+    }
+    .text {
+      font-size: 16px;
+      margin-top: 22px;
+    }
+    button {
+      width: 50px;
+      height: 50px;
+      background-size: 100% 100%;
+      margin-left: -25px;
+    }
+  }
+}
 .arrow-animation {
   background: url('img/nextArrow.png') no-repeat;
   background-size: 100% 100%;
-  position: absolute;
-  left: 50%;
   width: 10vw;
   height: 10vw;
-  margin-left: -5vw;
-  bottom: 20px;
-  animation: arrow 0.7s linear infinite alternate;
+  position: relative;
+  animation: arrow 1s  infinite;
   max-width: 50px;
   max-height: 50px;
+  margin: 50px auto 20px;
+  transform: rotate(180deg)
+}
+.arrow {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  margin: 0 0 0 -5vw;
 }
 .triangle {
   &:after {
@@ -683,7 +788,7 @@
 }
 @media screen and (max-width:400px) {
   .body-bgColor {
-    font-size: 10px;
+    font-size: 14px;
   }
   .section {
     &.section-3 {
@@ -717,18 +822,12 @@
     }
   }
   .section.section-2 .state {
-    .process {
-      top: -47px;
-    }
     font-size: 15px;
   }
 }
 @media screen and(max-width:767px) {
-  .section.section-8 a {
-    margin-bottom: 30px;
-  }
   .section {
-    .absent .monkey {
+    .monkey, .allRight {
       max-width: 150px;
       margin-top: 0.5em;
       max-height: 150px;
@@ -809,18 +908,101 @@
     max-height: 120px;
   }
 }
-@media (device-height:568px) and (-webkit-min-device-pixel-ratio:2) {
-  .section.section-8 a {
-    margin: 0 auto;
-  }
-}
 @media screen and (min-width:980px) {
-  .section-5, .section-6, .section-7 {
-    .fp-tableCell {
-      width: 980px;
-    }
-  }
   .section.section-2 .state .time {
     left: -2px;
+  }
+  .cover.tab {
+    padding: 10%;
+  }
+  .section.section-2 .state:before {
+    margin-left: -7px;
+  }
+  .section {
+    &.section-2 .wrap {
+      bottom: 10em;
+    }
+    &.section-6, &.section-5, &.section-7, &.section-4 {
+      max-width: 1980px;
+
+      .fp-tableCell {
+        display: block;
+      }
+      .arrow-animation {
+        opacity: 0;
+      }
+    }
+    &.section-4 {
+      .timeline {
+        max-width: 980px;
+        margin: 0 auto;
+      }
+    }
+    &.section-5 {
+      .wrong {
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 0;
+      }
+    }
+    &.section-6, &.section-7 {
+      .liveWrong {
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 0;
+      }
+    }
+  }
+  .section.section-4 .timeline {
+    .item {
+      .time {
+        margin-left: 20%;
+      }
+      .line {
+        left: 30%;
+      }
+      .message {
+        margin-right: 5%;
+      }
+    }
+    .headBall {
+      left: calc(~"30% - 6px");
+    }
+  }
+}
+
+/* 适配Mac本 */
+.mac {
+  .section {
+    &.section-1 img {
+      max-width: 500px;
+    }
+    &.section-2 {
+      .stateWrap {
+        position: relative;
+        top: -120px;
+      }
+      .state .time.triangle:before, .state .time.triangle:after {
+        top: 33px;
+      }
+      .wrap {
+        canvas#pie {
+          width: 300px;
+          height: 300px;
+        }
+      }
+    }
+    &.section-8 {
+      img:first-child {
+        width: 300px;
+      }
+    }
+  }
+}
+@media (device-height:568px) and (-webkit-min-device-pixel-ratio:2) {
+
+  /* 兼容iphone5 */
+  .spot {
+    opacity: 0
   }
 }
