--- a/source/widget/UserHome.report/report.less
+++ b/source/widget/UserHome.report/report.less
@@ -753,6 +753,12 @@
   margin: 50px auto 20px;
   transform: rotate(180deg)
 }
+.section-1 .arrow-animation, .section-2  .arrow-animation, .section-3 .arrow-animation {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  margin: 0 0 0 -5vw;
+}
 .arrow {
   position: absolute;
   bottom: 20px;
