--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -17,12 +17,17 @@
     position: relative;
     .ui-dropdown {
         width: auto !important;
+        position: relative;
         .dropdown-handle {
             display: inline-block;
             cursor: pointer;
             padding: 0 10px;
             border-left: 1px solid transparent;
             border-right: 1px solid transparent;
+        }
+        .selGradeTips{
+            position: absolute;
+            left: -25px;
         }
         .dropdown-body {
             display: none;
