--- a/source/widget/UserHome.report/report.less
+++ b/source/widget/UserHome.report/report.less
@@ -547,7 +547,7 @@
     display: none;
   }
 }
-.arrow {
+.body-bgColor .arrow {
   background: url('img/nextArrow.png') no-repeat;
   background-size: 100% 100%;
   position: relative;
